syntax = 'proto2';


/**********************************************
 -------------------- Data --------------------
 **********************************************/

enum UserState_Proto {
	OUTCHAT						= 1;
	INCHAT						= 2;
    WRITE						= 3;
	SLEEP						= 4;	
}

enum MessageResult{
    OK                                  = 1;
    ERROR                               = 2;
}
												

